Fixed styling issues on mobile
Also started working on adding in possible thumbnails. Might not
be worth my time to try and display thumbnails.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,8 +14,6 @@ body {
     margin: 20px;
     margin-top: 30px;
     padding: 50px;
-    padding-left: 700px;
-    padding-right: 700px;
     padding-bottom: 10px;
     display: block;
 }
