--- a/styles/threadCount.css
+++ b/styles/threadCount.css
@@ -1,6 +1,8 @@
 .count-flex{
-    display: inline-flex;
+    display: flex;
     margin-bottom: 10px;
+    margin-left: 25%;
+    margin-right: 25%;
 }
 
 .field-name{
@@ -17,4 +19,16 @@
     max-width: 50px;
     border: solid rgb(204, 204, 204);
     padding: 5px;
+}
+@media screen and (min-width: 768px) and (max-width: 999px) {
+    .count-flex{
+        margin-bottom: 10px;
+        margin-left: 5px;
+    }
+}
+@media screen and (min-width: 0px) and (max-width: 767px) {
+    .count-flex{
+        margin-bottom: 10px;
+        margin-left: 0px;
+    }
 }
