--- a/styles/threads.css
+++ b/styles/threads.css
@@ -3,9 +3,17 @@
     border-radius: 4px;
     border: 1px solid rgb(204, 204, 204);
     padding: 15px 20px;
+    margin-left: 25%;
+    margin-right: 25%;
     margin-bottom: 15px;
     display: block;
 }  
+
+.thumbnail{
+    width: 5%;
+    height: auto;
+    border-radius: 5rem;
+}
 
 .delete-button {
     width: 18px;
@@ -16,11 +24,6 @@
 .delete-button:hover{
     content: url(../public/images/black-delete-icon.svg);
 }
-
-/* .delete-button:active{
-    content: url(../public/images/red-delete-icon.svg);
-    transform: translateY(.5px);
-} */
 
 .thread-sizing {
     padding: 5px;
@@ -59,12 +62,29 @@
         margin-top: 1px;
     }
 }
-@media screen and (min-width: 768px) and (max-width: 1279px) {
+@media screen and (min-width: 768px) and (max-width: 1000px) {
     .subreddit-container {
         margin-bottom: 10px;
-        margin-top: 0px
+        margin-top: 0px;
+        margin-left: 5px;
+        margin-right: 5px;
+        
     }
 }
+@media screen and (min-width: 1001px) and (max-width: 1279px) {
+    .subreddit-container {
+        margin-bottom: 10px;
+        margin-top: 0px;
+    }
+}
+@media screen and (min-width: 1280px) and (max-width: 1700px)  {
+    .subreddit-container {
+        margin-bottom: 10px;
+        margin-top: 0px;
+    }
+}
+
+
 
 /* Loading animation to play between searches */
 .center-animation {
